[package]
name = "lizzy"
version = "0.1.4"
edition = "2021"
license = "MIT"

[profile.release]
strip = true # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = "fat" # This can remove dead code and often times reduces binary size.
codegen-units = 1 # Allow for maximum size reduction optimizations, but longer compile time.
panic = "abort"

[dependencies]
anyhow = "1.0.86"
once_cell = "1.19.0"
pico-args = "0.5"
serde_json = "1.0.133"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
zbus = { version = "5.1", default-features = false, features = ["tokio"] }
