[package]
name = "lizzy"
version = "0.2.1"
edition = "2024"
license = "MIT"

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.97"
futures-util = "0.3.31"
once_cell = "1.20.3"
pico-args = "0.5"
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
zbus = { version = "5.5", default-features = false, features = ["tokio"] }
